--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "dotenv": "^16.3.1",
-    "fastify": "^4.21.0",
-    "zod": "3.20.6"
+    "fastify": "^4.21.0"
   }
 }
